Modified navbar to have fixed position at top of page, and to display in front of other elements. Added top margin to header to align with fixed navbar.

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -4,6 +4,8 @@
 header {
   height: 400px;
   width: 100%;
+  /* display vertically beneath the fixed navbar */
+  margin-top: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
