--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,6 +6,11 @@ nav {
   background-color: #4056A1;
   color: #FFFFFF;
   padding: 1.5em;
+  /* Make navbar sticky / fixed position at top */
+  position: fixed;
+  top: 0;
+  /* Ensure that navbar displays in front of other elements */
+  z-index: 10;
 }
 
 nav span {
